Add it.json and complete all the texts

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,29 +3,29 @@
   "appbar_experience": "experience",
   "appbar_projects": "projects",
   "appbar_contacts": "contacts",
-  "hello_caption": "Hello! My name is",
+  "hello_caption": "Ciao! My name is",
   "hello_name": "Lorenzo Calisti",
   "hello_subtitle": "Developer & Computer Science student based in Italy.",
   "about_title": "About Me",
-  "about_content": "Hello! I’m Lorenzo Calisti, I’m from Monte Cerignone (PU), a little town in the center of Italy. I’ve got a three-year degree in Applied Computer Science from Università di Urbino “Carlo Bo”. I’m a Developer and Computer Science student based in Italy. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt, ante et convallis faucibus, enim ipsum aliquet felis, at lobortis nulla lorem nec magna. Quisque interdum tellus nisi, ac eleifend sapien sagittis et. Nunc et lectus et erat tempus gravida. Curabitur mollis fringilla risus vitae condimentum. Sed vitae rhoncus erat, et laoreet sem.\\n\\nHere are a few tecnologies an programming languages I’ve been working with:",
+  "about_content": "Hello! I’m Lorenzo Calisti.\nI’m from Monte Cerignone (PU), a little town in the center of Italy.\nI’ve got a three-year degree in Applied Computer Science from Università di Urbino “Carlo Bo”.\nWhen I'm not working I'm probably watching a TV series, an anime or I'm doing a ride on a MTB.\n\nHere are a few technologies an programming languages I’ve been working with:",
   "work_title": "Where I've Worked",
   "work_bosch_title": "Internship at Robert Bosch S.p.a",
-  "work_bosch_description": "Supporto nello sviluppo di un'applicazione quiz per IOS (IPad) a tema industria 4.0 utilizzata dal reparto TEC durante gli eventi di formazione del personale interno ed esterno.",
+  "work_bosch_description": "Support in the development of a quiz app for IOS (iPad) with the industry 4.0 theme used by TEC unit for internal and external personnel training events.",
   "work_mec_title": "Internship at Mec System S.R.L.",
-  "work_mec_description": "Sviluppo di un software per il monitoraggio delle ore di lavoro dei dipendenti e dell’avanzamento dell commesse composto da un’interfaccia web e un API Rest Node.js.",
+  "work_mec_description": "Development of a software for monitoring the working hours of employees and the progress of orders consisting of a web interface and an Node.js REST API.",
   "study_title": "Where I've Studied",
   "study_degree_title": "Three-year degree in Applyed Computer Science",
   "study_degree_location": "Università degli studi di Urbino \"Carlo Bo\"",
-  "study_degree_info": "Progettazione e Sviluppo di un'applicazione per Analisi Stabilometrica tramite Smartphone",
+  "study_degree_info": "Design and Development of an application for Stabilometric Analysis via Smartphone",
   "study_diploma_title": "Scientific high school diploma",
   "study_diploma_location": "Istituto Omnicomprensivo \"Montefeltro\"",
   "project_title": "My Projects",
   "project_balance_title": "Balance",
-  "project_balance_description": "Applicazione per Smartphone sviluppata per la tesi in Informatica Applicata in accordo con DIGIT s.r.l. con lo scopo di consentire a chiunque di misurare la propria postura stabilometrica in pochi secondi sfruttando gli accelerometri del proprio smartphone.",
+  "project_balance_description": "Smartphone application developed for the thesis in Applied Informatics in agreement with DIGIT s.r.l. with the aim of allowing anyone to measure their stabilometric posture in a few seconds using the accelerometers of their smartphone.",
   "project_tasky_title": "Tasky",
-  "project_tasky_description": "Applicazione multi piattaforma per la gestione dell'andamento dei progetti all'interno di un ambiente di lavoro.",
+  "project_tasky_description": "Multi-platform application for managing the progress of projects within a work environment.",
   "project_petify_title": "Petify",
-  "project_petify_description": "Applicazione per dispositivi Android che consente agli utenti di segnalare i propri animali domestici scomparsi in modo da poterli ritrovare grazie all'aiuto della comunity.",
+  "project_petify_description": "Application that allows users to report their missing pets so that they can be found with the help of the community.",
   "contact_title": "Contact Me",
-  "contact_description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque massa mattis tellus vitae, felis at ut vitae. Massa nullam massa potenti massa."
+  "contact_description": "For any curiosity or doubt, do not hesitate to contact me via email or DM."
 }
